@@ -331,9 +331,7 @@ public final class GetAction extends AbstractMailAction {
                         final ServerUserSetting setting = ServerUserSetting.getInstance();
                         final int contextId = session.getContextId();
                         final int userId = session.getUserId();
-                        if (setting.isContactCollectionEnabled(contextId, userId).booleanValue() && setting.isContactCollectOnMailAccess(
-                            contextId,
-                            userId).booleanValue()) {
+                        if (setting.isContactCollectOnMailAccess(contextId, userId).booleanValue()) {
                             triggerContactCollector(session, mail);
                         }
                     } catch (final OXException e) {
@@ -430,9 +428,7 @@ public final class GetAction extends AbstractMailAction {
                         final ServerUserSetting setting = ServerUserSetting.getInstance();
                         final int contextId = session.getContextId();
                         final int userId = session.getUserId();
-                        if (setting.isContactCollectionEnabled(contextId, userId).booleanValue() && setting.isContactCollectOnMailAccess(
-                            contextId,
-                            userId).booleanValue()) {
+                        if (setting.isContactCollectOnMailAccess(contextId, userId).booleanValue()) {
                             triggerContactCollector(session, mail);
                         }
                     } catch (final OXException e) {
@@ -450,15 +446,13 @@ public final class GetAction extends AbstractMailAction {
                 if (!mail.containsAccountId()) {
                     mail.setAccountId(mailInterface.getAccountID());
                 }
-                final boolean wasUnseen = (mail.containsPrevSeen() && !mail.isPrevSeen());
+                final boolean wasUnseen = (unseen ? !mail.isSeen() : mail.containsPrevSeen() && !mail.isPrevSeen());
                 if (wasUnseen) {
                     try {
                         final ServerUserSetting setting = ServerUserSetting.getInstance();
                         final int contextId = session.getContextId();
                         final int userId = session.getUserId();
-                        if (setting.isContactCollectionEnabled(contextId, userId).booleanValue() && setting.isContactCollectOnMailAccess(
-                            contextId,
-                            userId).booleanValue()) {
+                        if (setting.isContactCollectOnMailAccess(contextId, userId).booleanValue()) {
                             triggerContactCollector(session, mail);
                         }
                     } catch (final OXException e) {
