@@ -149,9 +149,7 @@ public final class TransportMailAction extends AbstractMailAction {
                 final ServerUserSetting setting = ServerUserSetting.getInstance();
                 final int contextId = session.getContextId();
                 final int userId = session.getUserId();
-                if (setting.isContactCollectionEnabled(contextId, userId).booleanValue() && setting.isContactCollectOnMailTransport(
-                    contextId,
-                    userId).booleanValue()) {
+                if (setting.isContactCollectOnMailTransport(contextId, userId).booleanValue()) {
                     triggerContactCollector(session, composedMail);
                 }
             } catch (final OXException e) {
