@@ -1,6 +1,7 @@
 * 2013-10-29 - thorben.betten@open-xchange.com
 
  - Fix for bug 29516: Do not store password in IMAP store cache
+ - Fix for bug 29518: Collect addresses on read access to unread/unseen messages
 
 * 2013-10-29 - tobias.friedrich@open-xchange.com
 
